# edgar-sec

./: .buildinfo  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  TEST_COVERAGE.md  changelog.html  code_of_conduct.html  contributing.html  edgar_sec_public_key.asc  genindex.html  glossary.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  security.html  sitemap.xml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: analyze.yml  docs.yml  main.yml  test.yml  update-feedstock.yml
_modules/: index.html
_modules/edgar_sec/: clients.html  edgar_data.html  edgar_sec.html  helpers.html  objects.html
_sources/: index.rst.txt  installation.rst.txt  quickstart.rst.txt
_sources/api/: asyncapi.rst.txt  index.rst.txt
_sources/examples/: advanced_usage.rst.txt  basic_usage.rst.txt  index.rst.txt
api/: asyncapi.html  data_classes.html  edgarapi.html  index.html
conda-forge/: meta.yaml
conda-recipe/: meta.yaml
examples/: advanced_usage.html  basic_usage.html  index.html
installation/: advanced_usage.html  basic_usage.html  data_visualization.html  index.html  installation.html  quickstart.html
resources/: api_overview.html  architecture.html  comparison.html  faq.html  index.html  notes.html  use_cases.html
scripts/: sync_about_version.py  sync_conda_recipe.py  update_feedstock.py
tests/: clients_test.py  edgar_data_test.py  edgar_sec_test.py  helpers_test.py  objects_test.py
(+569 files in other folders)
