[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edgar-sec"
version = "0.0.2"
dependencies = [
"requests"
]
requires-python = ">=3.8"
authors = [
  {name="Nikhil Sunder", email="nsunder724@gmail.com"}
]
maintainers = [
  {name="Nikhil Sunder", email="nsunder724@gmail.com"}
]
description = "A simple python wrapper for interacting with the US Securities and Exchange Commission API: EDGAR"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment"
]
license = {file = "LICENSE"}
keywords = ["edgar", "sec", "api", "finance", "reporting"]

[project.urls]
Repository = "https://github.com/nikhilxsunder/edgar-sec"
Issues = "https://github.com/nikhilxsunder/edgar-sec/issues"
Documentation = "https://www.sec.gov/search-filings/edgar-application-programming-interfaces"